# PointContour

./: .gitignore  CMakeLists.txt  Makefile  PointContour.sln  README.md  SketchSurfaceMaker.vcproj  SketchSurfaceMaker.vcxproj  SketchSurfaceMaker.vcxproj.filters  config.xml  frame_size.txt  optimization.cpp  optimization.h  result.out  test.cpp  test.mod  test.run  test_ori.bat
GUI/: PointContourGUI.cbp  PointContourGUI.layout  PointContourGUIApp.cpp  PointContourGUIApp.h  PointContourGUIMain.cpp  PointContourGUIMain.h  SketchGLCanvas.cpp  SketchGLCanvas.h
GUI/wxsmith/: PointContourGUIframe.wxs
GUI_win/: PointContourGUI.layout  PointContourGUIMain.cpp  PointContourGUIMain.h  SketchGLCanvas.cpp
GUI_win/wxsmith/: PointContourGUIframe.wxs
coarseSuf/include/: Boundary.h  CoarseSuf.h  Configure.h  CurveInfo.h  DMWT.h  EdgeInfo.h  Hole.h  Point3.h  SubKey.h  Tile.h  TriangleInfo.h  Utility.h  Vector3.h
coarseSuf/src/: Boundary.cpp  CurveInfo.cpp  DMWT.cpp  EdgeInfo.cpp  Hole.cpp  Point3.cpp  Tile.cpp  TriangleInfo.cpp  Vector3.cpp
external_win/DrT/inc/: DrT.h
external_win/DrT/inc/Algorithm/: DMWT.cpp  DMWT.h  DMWT_dot.cpp
external_win/DrT/inc/DataStructure/: EdgeInfo.cpp  EdgeInfo.h  MingCurve.cpp  MingCurve.h  TriangleInfo.cpp  TriangleInfo.h
external_win/DrT/inc/Utility/: Configure.h  Errors.h  Point3.cpp  Point3.h  Vector3.cpp  Vector3.h
external_win/coarseSuf/inc/: Boundary.h  CoarseSuf.h  Configure.h  CurveInfo.h  Hole.h  Point3.h  SubKey.h  Vector3.h  nvVector.h
external_win/freeglut/lib/: freeglut.exp  freeglut.lib  freeglut_static.lib
external_win/smoothPatch/inc/: SmoothPatch.h
external_win/smoothPatch/lib/: SmoothPatch.lib  SmoothPatch_x64.lib  SmoothPatchd.lib  cblas_x64.lib  superlu_3.1_x64.lib
external_win/smoothPatch/lib/Old/: SmoothPatch.lib  SmoothPatchd.lib
external_win/tetgen/inc/: tetgen.h
include/: ConfigManager.h  LocalFrame.h  PointKDTree.h  RandGenerator.h  SketchGLCanvas.h  TimeManager.h  adjMatrix.h  axisWidget.h  colormap.h  constraints.h  curveMappingTool.h  curveNet.h  cycleDiscovery.h  disjointSet.h  fileIOHelper.h  heap.h  macros.h  nvVector.h  optimization.h  partialSymmetry.h  pclUtils.h  plane.h  pointCloudRenderer.h  pointCloudUtils.h  smallUtils.h  splineUtils.h  textfile.h  wx_pch.h
matlab/: bpoly.m  calcBspline.m  calcCoefs.m  convert2Nurbs.m  convert2Spline.m  curves.txt  main.m  pp_form.m  readCurves.m  resampleBsp.m  spDiff.m
src/: ConfigManager.cpp  RandGenerator.cpp  SketchGLCanvas.cpp  TimeManager.cpp  adjMatrix.cpp  axisWidget.cpp  colormap.cpp  constraints.cpp  curveMappingTool.cpp  curveNet.cpp  cycleDiscovery.cpp  disjointSet.cpp  fileIOHelper.cpp  optimization.cpp  partialSymmetry.cpp  pclUtils.cpp  plane.cpp  pointCloudRenderer.cpp  pointCloudUtils.cpp  smallUtils.cpp  splineUtils.cpp  textfile.cpp
sufTune/include/: HashMap.h  SufTune.h  Utility.h  config.h  meshFair.h  mymath.h
sufTune/src/: meshFair.cpp  mymath.cpp
